--- a/index.htm
+++ b/index.htm
@@ -32,12 +32,18 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2 class="text-center">Youtube results</h2>
+                    <p>
+                        50 most relevant results from Yogscast channel
+                    </p>
                     <ul id="resultsYoutube" >
 
                     </ul>
                 </div>
                 <div class="col-md-6">
                     <h2 class="text-center">Twitch results</h2>
+                    <p>
+                        All broadcasts containing the query in title or game name
+                    </p>
                     <ul id="resultsTwitch">
 
                     </ul>
